k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telltale-notification
  namespace: telltale-notification
  labels:
    app.kubernetes.io/name: telltale-notification
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 8443
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: telltale-notification
